fix current line color.

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -44,12 +44,12 @@
   border-color: @syntax-cursor-color;
 }
 
-.editor.is-focused .selection .region {
-  background-color: @syntax-selection-color;
+.editor .selection .region {
+    background-color: @syntax-selection-color;
 }
 
-.editor.is-focused .line-number.cursor-line-no-selection, .editor.is-focused .line.cursor-line {
-  background-color: #403c37;
+.editor .line-number.cursor-line-no-selection, .editor .line.cursor-line {
+  background-color: @syntax-background-color;
 }
 
 .keyword.operator {
