--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -3,9 +3,14 @@
 
 // General colors
 @syntax-text-color: #ede0ce;
+@text-color-selected: white;
+/*@syntax-text-color-selected: #ede0ce;*/
 @syntax-cursor-color: #f8f8f0;
 @syntax-selection-color: #1A2020;
 @syntax-background-color: #0a2c38;
+
+@selected-border-color: rgba(0,0,0,0.9);
+
 
 // Guide colors
 @syntax-wrap-guide-color: #3b3a32;
