--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -1,55 +1,58 @@
 @import "syntax-variables";
 
-.editor {
+:host, .atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 }
 
-.editor .gutter {
-  background-color: @syntax-gutter-background-color;
-  color: @syntax-gutter-text-color;
-}
+:host, .atom-text-editor{
 
-.editor .gutter .line-number.cursor-line {
-  background-color: @syntax-gutter-background-color-selected;
-  color: @syntax-gutter-text-color-selected;
-}
+    .gutter {
+      background-color: @syntax-gutter-background-color;
+      color: @syntax-gutter-text-color;
+    }
 
-.editor .gutter .line-number.cursor-line-no-selection {
-  color: @syntax-gutter-text-color-selected;
-}
+    .gutter .line-number.cursor-line {
+      background-color: @syntax-gutter-background-color-selected;
+      color: @syntax-gutter-text-color-selected;
+    }
 
-.editor .wrap-guide {
-  color: @syntax-wrap-guide-color;
-}
+    .gutter .line-number.cursor-line-no-selection {
+      color: @syntax-gutter-text-color-selected;
+    }
 
-.editor .indent-guide {
-  color: @syntax-indent-guide-color;
-}
+    .wrap-guide {
+      color: @syntax-wrap-guide-color;
+    }
 
-.editor .invisible-character {
-  color: @syntax-invisible-character-color;
-}
+    .indent-guide {
+      color: @syntax-indent-guide-color;
+    }
 
-.editor .search-results .marker .region {
-  background-color: transparent;
-  border: @syntax-result-marker-color;
-}
+    .invisible-character {
+      color: @syntax-invisible-character-color;
+    }
 
-.editor .search-results .marker.current-result .region {
-  border: @syntax-result-marker-color-selected;
-}
+    .search-results .marker .region {
+      background-color: transparent;
+      border: @syntax-result-marker-color;
+    }
 
-.editor.is-focused .cursor {
-  border-color: @syntax-cursor-color;
-}
+    .search-results .marker.current-result .region {
+      border: @syntax-result-marker-color-selected;
+    }
 
-.editor .selection .region {
-    background-color: @syntax-selection-color;
-}
+    .is-focused .cursor {
+      border-color: @syntax-cursor-color;
+    }
 
-.editor .line-number.cursor-line-no-selection, .editor .line.cursor-line {
-  background-color: @syntax-background-color;
+    .selection .region {
+        background-color: @syntax-selection-color;
+    }
+
+    .line-number.cursor-line-no-selection,   .line.cursor-line {
+      background-color: @syntax-background-color;
+    }
 }
 
 .keyword.operator {
